--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.7.4",
     "nuxt": "^3.11.2",
     "prisma": "^5.15.0",
+    "quanmsms": "^1.0.2",
     "typescript": "^5.4.5",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
